--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Olivia & Enrico Wedding Template</title>
+    <title>K&amp;P</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="images/favicon.png" />
     <link rel="stylesheet" href="css/animate.css">
@@ -43,9 +43,9 @@
                     <li><a href="index.html#organization">Organization</a></li>
                     <li><a href="index.html#gallery">Gallery</a></li>
                     <li><a href="index.html#whenwhere">When & Where</a></li>
-                    <li><a href="index.html#rsvp">R.S.V.P</a></li>
-                    <li><a href="index.html#gift">Gift Registry</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <!-- <li><a href="index.html#rsvp">R.S.V.P</a></li> -->
+                    <!-- <li><a href="index.html#gift">Gift Registry</a></li> -->
+                    <!-- <li><a href="blog.html">Blog</a></li> -->
                 </ul>
             </nav>
             <!-- Sidebar Footer -->
