--- a/index.html
+++ b/index.html
@@ -500,10 +500,10 @@
                         src: "images/slider-0.JPG"
                     }, 
 					{
-                        src: "images/slider-1.jpg"
+                        src: "images/slider-1.JPG"
                     },  
 					{
-                        src: "images/slider-3.jpg"
+                        src: "images/slider-3.JPG"
                     }],
                     overlay: true,
                     transition: 'fade2',
