--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <div class="row mb-60">
                         <div class="col-md-6">
                             <div class="item toright mb-30 animate-box" data-animate-effect="fadeInLeft">
-                                <div class="img"> <img src="images/bride-.JPG" alt=""> </div>
+                                <div class="img"> <img src="images/bride-.webp" alt=""> </div>
                                 <div class="info valign">
                                     <div class="full-width">
                                         <h6>Krishna Kharol <i class="ti-heart"></i></h6> <span>The Bride</span>
@@ -95,7 +95,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="item mb-30 animate-box" data-animate-effect="fadeInRight">
-                                <div class="img"> <img src="images/groom-.JPG" alt=""> </div>
+                                <div class="img"> <img src="images/groom-.webp" alt=""> </div>
                                 <div class="info valign">
                                     <div class="full-width">
                                         <h6>Pooran Kharol <i class="ti-heart"></i></h6> <span>The Groom</span>
@@ -146,7 +146,7 @@
                     <div class="row">
                         <div class="col-md-5 mb-30">
                             <div class="story-img animate-box" data-animate-effect="fadeInLeft">
-                                <div class="img"> <img src="images/story-.JPG" class="img-fluid" alt=""> </div>
+                                <div class="img"> <img src="images/story.webp" class="img-fluid" alt=""> </div>
                                 <div class="story-img-2 story-wedding" style="background-image: url(images/wedding-logo.png);"></div>
                             </div>
                         </div>
@@ -497,13 +497,13 @@
                 $('#home').vegas({
                     slides: [
 					{
-                        src: "images/slider-0.JPG"
+                        src: "images/slider-1.webp"
                     }, 
 					{
-                        src: "images/slider-1.JPG"
+                        src: "images/slider-2.webp"
                     },  
 					{
-                        src: "images/slider-3.JPG"
+                        src: "images/slider-3.webp"
                     }],
                     overlay: true,
                     transition: 'fade2',
